--- a/public/assets/web/ASSets/css/header.css
+++ b/public/assets/web/ASSets/css/header.css
@@ -219,8 +219,11 @@
       }
       .header-left {
         justify-content: space-between;
+        gap: 10px;
+        flex-wrap: nowrap;
 
         .header-nav {
+          width: fit-content;
           .nav-main-menu {
             .main-menu {
               display: flex;
@@ -1044,9 +1047,10 @@
 /* sec-header */
 /* categories shop */
 .sec-header {
-  padding: clamp( 10px, 0.8333333333333334vw, 16px);
+  padding: clamp(10px, 0.8333333333333334vw, 16px);
   background: #f0f3f8;
   width: 100%;
+  margin-bottom: 20px;
 
   display: flex;
   align-items: center;
@@ -1057,63 +1061,63 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    gap: clamp( 15px, 1.5625vw, 30px);
+    gap: clamp(15px, 1.5625vw, 30px);
 
     .categories-item {
       cursor: pointer;
       transition: 0.3s;
       font-family: Alexandria;
-      font-size: clamp( 11px, 0.7291666666666666vw, 14px);
+      font-size: clamp(11px, 0.7291666666666666vw, 14px);
       font-weight: 700;
       line-height: 18px;
       color: #323a3e;
 
-      .dropdown-menu.show{
+      .dropdown-menu.show {
         display: flex;
         align-items: start;
         justify-content: center;
-        padding: clamp( 20px, 2.083333333333333vw, 40px);
-        gap: clamp( 50px, 4.114583333333333vw, 79px);
+        padding: clamp(20px, 2.083333333333333vw, 40px);
+        gap: clamp(50px, 4.114583333333333vw, 79px);
         border-radius: 12px;
-        border: 1px solid #F1F1F2;
+        border: 1px solid #f1f1f2;
 
-        .menu-img{
-          width: clamp( 200px, 18.229166666666664vw, 350px);
+        .menu-img {
+          width: clamp(200px, 18.229166666666664vw, 350px);
 
-          img{
+          img {
             width: 100%;
           }
         }
 
-        .menuList{
+        .menuList {
           display: flex;
           align-items: start;
           justify-content: start;
           flex-direction: column;
 
-          h3{
+          h3 {
             font-family: Alexandria;
-            font-size: clamp( 12px, 0.8333333333333334vw, 16px);
+            font-size: clamp(12px, 0.8333333333333334vw, 16px);
             font-weight: 600;
             line-height: 16px;
-            color: #3F4254;
+            color: #3f4254;
           }
 
-          ul{
+          ul {
             display: flex;
             align-items: start;
             justify-content: start;
             flex-direction: column;
-            gap: clamp( 10px, 1.0416666666666665vw, 20px);
-            margin-top: clamp( 15px, 1.3020833333333335vw, 25px);
-            padding-inline-start: clamp( 7px, 0.5208333333333333vw, 10px);
+            gap: clamp(10px, 1.0416666666666665vw, 20px);
+            margin-top: clamp(15px, 1.3020833333333335vw, 25px);
+            padding-inline-start: clamp(7px, 0.5208333333333333vw, 10px);
 
-            li{
+            li {
               font-family: Inter;
-              font-size: clamp( 10px, 0.7291666666666666vw, 14px);
+              font-size: clamp(10px, 0.7291666666666666vw, 14px);
               font-weight: 700;
               line-height: 14px;
-              color: #5E6278;
+              color: #5e6278;
               display: flex;
               align-items: center;
               justify-content: start;
@@ -1121,21 +1125,27 @@
               text-wrap: nowrap;
               flex-wrap: nowrap;
 
-              div{
-                width: clamp( 5px, 0.3125vw, 6px);
-                height: clamp( 15px, 1.0416666666666665vw, 20px);
-                background: #D8D8E5;
+              div {
+                width: clamp(5px, 0.3125vw, 6px);
+                height: clamp(15px, 1.0416666666666665vw, 20px);
+                background: #d8d8e5;
                 border-radius: 20px;
+              }
+            }
+            li:hover {
+              color: #FD9636;
+
+              div {
+                background: #FD9636;
               }
             }
           }
         }
       }
-
     }
 
     .categories-item.last-four {
-      .dropdown-menu.show{
+      .dropdown-menu.show {
         inset-inline-end: 50%;
       }
     }
@@ -1162,3 +1172,112 @@
   }
 }
 
+/* //////////////////////////// */
+/* dark mode */
+body.dark {
+  /* main header */
+  .header {
+    float: unset;
+    .container {
+      .main-header {
+        .header-left {
+          .header-nav {
+            .nav-main-menu {
+              .main-menu {
+                li {
+                  a {
+                    color: #fff;
+                  }
+
+                  .active {
+                    color: #fd9636;
+                  }
+
+                  .dropdown {
+                    button {
+                      color: #fff !important;
+                    }
+
+                    .dropdown-menu.show {
+                      background-color: var(--dark-mode-second);
+                      border: 1px solid var(--dark-mode-white);
+                      a {
+                        color: #fff;
+                      }
+
+                      .dropLine {
+                        border: 1px solid var(--dark-mode-white);
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+
+          .header-search {
+            .box-header-search,
+            .mobile-box-header-search {
+              .box-keysearch,
+              .mobile-box-keysearch {
+                width: 100%;
+              }
+
+              .box-keysearch input,
+              .mobile-box-keysearch input {
+                border: 0px !important;
+              }
+
+              .box-category,
+              .mobile-box-category {
+                position: relative;
+                margin-right: 15px;
+                min-width: 120px;
+                span {
+                  color: #fff;
+                }
+              }
+              .box-category::before,
+              .mobile-box-category::before {
+                display: none;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  /* sec-header */
+  /* categories shop */
+  .sec-header {
+    background: var(--dark-mode-second);
+
+    .categories-shop {
+      .categories-item {
+        color: #fff;
+
+        .dropdown-menu.show {
+          background: var(--dark-mode-second);
+          border: 1px solid #676767;
+
+          .menuList {
+            h3 {
+              color: #fff;
+            }
+
+            ul {
+              li {
+                color: #b9bcd0;
+
+                div {
+                  background: #d8d8e5;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
