--- a/public/assets/web/ASSETS_En/css/STYLEeN9.css
+++ b/public/assets/web/ASSETS_En/css/STYLEeN9.css
@@ -156,9 +156,9 @@ body {
   /* max-width: 100vw;
   overflow-x: hidden !important; */
 }
-body.dark {
+/* body.dark {
   background-color: #202124 !important;
-}
+} */
 
 ol,
 ul {
@@ -3226,7 +3226,6 @@ a.text-brand-3:hover {
   float: left;
   width: 100%;
   position: relative;
-  border-bottom: 1px solid #d5dfe4;
 }
 .header .container {
   max-width: 92%;
@@ -3749,7 +3748,7 @@ a.text-brand-3:hover {
   border: 1px solid #d5dfe4;
   border-radius: 4px;
 }
-body.dark .section-box {
+/* body.dark .section-box {
   background-color: #202124 !important;
   color: white !important;
 }
@@ -3777,11 +3776,11 @@ body.dark header {
 }
 body.dark .bg-dark {
   background-color: #202124 !important;
-}
+} */
 /* body.dark .btn-open{
   border: none;
 } */
-body.dark h1,
+/* body.dark h1,
 body.dark h2,
 body.dark .color-brand-3,
 body.dark .color-gray-900,
@@ -3839,7 +3838,7 @@ body.dark .list-col-5 li .item-list:hover {
 body.dark .form-control {
   background-color: #202124;
   color: #fff;
-}
+} */
 
 .dropdown-item {
   font-size: 14px;
