--- a/public/assets/web/ASSets_Ar/css/STYLEAR12.css
+++ b/public/assets/web/ASSets_Ar/css/STYLEAR12.css
@@ -156,9 +156,9 @@ body {
   /* max-width: 100vw;
   overflow-x: hidden !important; */
 }
-body.dark {
+/* body.dark {
   background-color: #202124 !important;
-}
+} */
 ol,
 ul {
   list-style: none;
@@ -855,7 +855,7 @@ h6 {
   display: inline-block;
   width: 100%;
 }
-body.dark .section-box {
+/* body.dark .section-box {
   background-color: #202124 !important;
   color: white !important;
 }
@@ -883,11 +883,11 @@ body.dark header {
 }
 body.dark .bg-dark {
   background-color: #202124 !important;
-}
+} */
 /* body.dark .btn-open{
   border: none;
 } */
-body.dark h1,
+/* body.dark h1,
 body.dark h2,
 body.dark .color-brand-3,
 body.dark .color-gray-900,
@@ -925,13 +925,13 @@ body.dark .btn-light:hover {
 }
 body.dark .header .main-menu li a {
   color: #fff;
-}
+} */
 
 .box-menu-category {
   color: #fff !important;
 }
 
-body.dark .itemside {
+/* body.dark .itemside {
   color: #fff;
 }
 body.dark a.itemside {
@@ -939,7 +939,7 @@ body.dark a.itemside {
 }
 body.dark .dropdown-menu a {
   color: #a6b0cf;
-}
+} */
 .font-bold {
   font-weight: bold !important;
 }
@@ -2222,7 +2222,7 @@ a.text-brand-3:hover {
   background-color: #f4f7fc;
   border: 1px solid #8c9ec5;
 }
-body.dark .list-col-5 li .item-list:hover {
+/* body.dark .list-col-5 li .item-list:hover {
   background-color: #202124;
   border: 1px solid #8c9ec5;
 }
@@ -2232,7 +2232,7 @@ body.dark .form-control {
 }
 body.dark input::placeholder {
   color: #fff;
-}
+} */
 .list-col-5 li .item-list .icon-left {
   padding-right: 10px;
   min-width: 50px;
@@ -3318,7 +3318,6 @@ body.dark input::placeholder {
   float: left;
   width: 100%;
   position: relative;
-  border-bottom: 1px solid #d5dfe4;
   min-height: 53px;
 }
 .header .container {
