--- a/public/assets/web/ASSETS_En/css/STYLEeN9.css
+++ b/public/assets/web/ASSETS_En/css/STYLEeN9.css
@@ -11518,33 +11518,46 @@ a:hover span {
 .cartItems {
   display: flex;
   align-items: flex-start;
-  justify-content: space-around;
+  justify-content: space-between;
   direction: ltr;
   margin: 100px 0;
+  border: 1px solid #F1F1F2;
+  border-radius: 12px;
+  box-shadow: 0px 3px 4px 0px #00000008;
+  padding: clamp( 10px, 0.78125vw, 15px);
 }
 
 .cartItems .items {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 49%;
+  width: 50%;
   flex-direction: column;
   gap: 1em;
   direction: rtl;
 }
 
-.cartItems .items .item {
+.cartItems .items .item-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  flex-direction: column;
+  border: 1px solid #F1F1F2;
+  border-radius: 8px;
+  box-shadow: 0px 3px 4px 0px #BCBCBC1A;
+}
+
+.cartItems .items .item-container .item {
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 100%;
   padding: 2px;
-  border: 1px solid #ebf0ff;
-  border-radius: 5px;
-  box-shadow: 0px 1px 5px 0px #00000040;
+  border-bottom: 1px solid #F1F1F2;
 }
 
-.cartItems .items .item .leftButtons {
+.cartItems .items .item-container .item .leftButtons {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -11553,13 +11566,13 @@ a:hover span {
   padding: 0 1em;
 }
 
-.cartItems .items .item .leftButtons .upBTNs {
+.cartItems .items .item-container .item .leftButtons .upBTNs {
   display: flex;
   gap: 1em;
   padding: 5px;
 }
 
-.cartItems .items .item .leftButtons .input-quantity {
+.cartItems .items .item-container .item .leftButtons .input-quantity {
   border: 1px solid #ebf0ff;
   box-shadow: 0px 1px 2px 0px #00000040;
   display: flex;
@@ -11568,14 +11581,14 @@ a:hover span {
   border-radius: 5px;
 }
 
-.cartItems .items .item .leftButtons .input-quantity .plus-cart {
+.cartItems .items .item-container .item .leftButtons .input-quantity .plus-cart {
   color: #fd9636;
   padding: 5px;
   width: 30px;
   text-align: center;
 }
 
-.cartItems .items .item .leftButtons .input-quantity input {
+.cartItems .items .item-container .item .leftButtons .input-quantity input {
   color: #fd9636;
   background-color: #ebf0ff;
   padding: 5px;
@@ -11586,19 +11599,19 @@ a:hover span {
   height: 28px;
 }
 
-.cartItems .items .item .leftButtons .input-quantity .minus-cart {
+.cartItems .items .item-container .item .leftButtons .input-quantity .minus-cart {
   color: #9098b1;
   padding: 5px;
   width: 30px;
   text-align: center;
 }
 
-.cartItems .items .item .itemInfo {
+.cartItems .items .item-container .item .itemInfo {
   display: flex;
   gap: 1em;
 }
 
-.cartItems .items .item .itemInfo img {
+.cartItems .items .item-container .item .itemInfo img {
   width: 100px;
   padding: 3px;
   border-radius: 10px;
@@ -11606,39 +11619,197 @@ a:hover span {
 }
 
 @media (max-width: 500px) {
-  .cartItems .items .item .itemInfo img {
+  .cartItems .items .item-container .item .itemInfo img {
     width: 94px;
     height: 94px;
     min-width: 94px !important;
   }
 }
 
-.cartItems .items .item .itemInfo .info {
+.cartItems .items .item-container .item .itemInfo .info {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
 }
 
-.cartItems .items .item .itemInfo .info h4 {
+.cartItems .items .item-container .item .itemInfo .info h4 {
   color: #000;
   font-size: 1rem !important;
   text-align: left;
 }
 
-.cartItems .items .item .itemInfo .info .cat {
+.cartItems .items .item-container .item .itemInfo .info .cat {
   color: #7f7f7f;
   font-size: 10px;
 }
 
-.cartItems .items .item .itemInfo .info .price {
+.cartItems .items .item-container .item .itemInfo .info .price {
   color: #fd9636;
   font-size: 15px;
   margin-top: 20px;
   font-weight: bold;
 }
 
+.cartItems{
+  .additions{
+    display: flex;
+    align-items: start;
+    justify-content: start;
+    flex-direction: column;
+    gap: clamp( 5px, 0.5208333333333333vw, 10px);
+    width: 100%;
+
+    .additions-head{
+      display: flex;
+      align-items: center;
+      justify-content: end;
+      width: 100%;
+      margin-top: clamp( 5px, 0.5208333333333333vw, 10px);
+      padding-inline-end: clamp( 10px, 0.7291666666666666vw, 14px);
+
+      span{
+        font-family: Alexandria;
+        font-size: clamp( 12px, 0.8333333333333334vw, 16px);
+        font-weight: 600;
+        line-height: 24px;
+        letter-spacing: 0.005em;
+        color: #000;
+      }
+
+      span:nth-child(3){
+        width: 57.8215%;
+        text-align: end;
+      }
+      span:nth-child(2){
+        width: 18.7717%;
+        text-align: end;
+      }
+      span:nth-child(1){
+        width: 11.1239%;
+        text-align: end;
+      }
+    }
+
+    .addition-items{
+      width: 100%;
+
+      .line{
+        width: 70%;
+        border-bottom: 1px solid #F1F1F2;
+        margin: 0 auto;
+      }
+
+      .addition-item{
+        display: flex;
+        align-items: center;
+        justify-content: start;
+        width: 100%;
+        padding: clamp( 5px, 0.5208333333333333vw, 10px) clamp( 10px, 0.7291666666666666vw, 14px);
+  
+        .addition-info{
+          display: flex;
+          align-items: center;
+          justify-content: end;
+          width: 100%;
+
+          .addition-buttons{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: clamp( 0px, 1.0416666666666665vw, 20px);
+
+            button{
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              border: none;
+              outline: none;
+
+              svg{
+                width: clamp( 15px, 1.7708333333333333vw, 34px);
+                height: clamp( 15px, 1.7708333333333333vw, 34px);
+              }
+            }
+          }
+  
+          .addition-count{
+            width: 11.1239%;
+            padding-inline-end: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: end;
+
+            .addition-count-text{
+              font-family: Alexandria;
+              font-size: clamp( 12px, 0.8333333333333334vw, 16px);
+              font-weight: 700;
+              line-height: 24px;
+              text-align: end;
+              color: #425A8B;
+            }
+          }
+
+          .addition-price{
+            display: flex;
+            align-items: end;
+            justify-content: start;
+            flex-direction: column;
+            width: 18.7717%;
+
+            .newPrice{
+              font-family: Alexandria;
+              font-size: clamp( 12px, 0.8333333333333334vw, 16px);
+              font-weight: 700;
+              line-height: 24px;
+              text-align: right;
+              color: #425A8B;
+            }
+
+            .old-price{
+              font-family: Alexandria;
+              font-size: clamp( 10px, 0.7291666666666666vw, 14px);
+              font-weight: 400;
+              line-height: 24px;
+              text-align: right;
+              color: #8C9EC5;
+              text-decoration: line-through;
+            }
+          }
+
+          .addition-title{
+            width: calc(57.8215% - clamp( 77px, 5.052083333333333vw, 97px));
+            display: flex;
+            align-items: center;
+            justify-content: end;
+  
+            .addition-title-text{
+              font-family: Alexandria;
+              font-size: clamp( 10px, 0.7291666666666666vw, 14px);
+              font-weight: 400;
+              line-height: 24px;
+              letter-spacing: 0.20000000298023224px;
+              padding-inline-end: clamp( 10px, 1.0416666666666665vw, 20px);
+              color: #000;
+              text-align: end;
+            }
+  
+            
+          }
+  
+          .addition-img{
+            width: clamp( 77px, 5.052083333333333vw, 97px);
+            img{
+              width: 100%;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
 @media (max-width: 500px) {
-  .cartItems .items .item .itemInfo .info .price {
+  .cartItems .items .item-container .item .itemInfo .info .price {
     font-size: 14px;
     margin-top: 14px;
   }
@@ -11649,7 +11820,12 @@ a:hover span {
 .checkout {
   display: flex;
   flex-direction: column;
-  width: 40%;
+  width: 43%;
+  border: 1px solid #F1F1F2;
+  border-radius: 8px;
+  box-shadow: 0px 3px 4px 0px #00000008;
+  background-color: #8C9EC51A;
+  padding: clamp( 15px, 1.40625vw, 27px);
 }
 
 .checkout .save-on {
@@ -11661,9 +11837,15 @@ a:hover span {
 }
 
 .checkout .save-on h4 {
-  font-size: 16px;
-  font-weight: 500;
+  font-family: Alexandria;
+  font-size: clamp( 16px, 1.1458333333333333vw, 22px);
+  font-weight: 400;
+  line-height: 32px;
   color: #000;
+  width: 100%;
+  text-align: start;
+  border-inline-start: 1px solid #FD9636;
+  padding-inline-start: clamp( 10px, 0.78125vw, 15px);
 }
 
 .checkout .save-on .save-on-input {
@@ -11674,6 +11856,7 @@ a:hover span {
   border: 1px solid #d9d9d9;
   border-radius: 8px;
   padding: 10px;
+  margin-top: clamp( 10px, 1.0416666666666665vw, 20px);
 }
 
 .checkout .save-on .save-on-input .input-section {
@@ -11691,6 +11874,7 @@ a:hover span {
   border: none;
   outline: none;
   color: #000;
+  background: transparent;
 }
 
 .checkout .save-on .save-on-input .input-section input::placeholder {
@@ -11705,12 +11889,15 @@ a:hover span {
 }
 
 .checkout label {
-  width: 100%;
-  text-align: left;
-  color: #000;
-  font-size: 24px;
-  font-weight: 700;
+  font-family: Alexandria;
+  font-size: clamp( 16px, 1.1458333333333333vw, 22px);
+  font-weight: 400;
   line-height: 32px;
+  color: #000;
+  width: 100%;
+  text-align: start;
+  border-inline-start: 1px solid #FD9636;
+  padding-inline-start: clamp( 15px, 0.78125vw, 15px);
 }
 
 .checkout .checkoutContent {
@@ -11837,7 +12024,7 @@ a:hover span {
     width: 100% !important;
   }
 
-  .cartItems .items .item .itemInfo .info h4 {
+  .cartItems .items .item-container .item .itemInfo .info h4 {
     font-size: 12px !important;
     line-height: 22.49px;
   }
