--- a/public/assets/web/ASSets/css/darkMode.css
+++ b/public/assets/web/ASSets/css/darkMode.css
@@ -1,5 +1,6 @@
 /* root colors */
 :root {
+  --main: #FD9636;
   --main-dark: #1d1d1d;
   --dark-mode-second: #262626;
   --dark-mode-white: #626262;
